--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,13 +31,19 @@ dependencies:
   flutter:
     sdk: flutter
 
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.8
+  # Estado / Firebase que você já usa
   firebase_core: ^4.1.1
   firebase_auth: ^6.1.0
   cloud_firestore: ^6.0.2
-  firebase_storage: ^13.0.2
+  provider: ^6.1.0
+  cupertino_icons: ^1.0.8
+
+  # >>> ADICIONE ESTAS <<<
+  image_picker: ^1.1.1
+  path_provider: ^2.1.4
+  shared_preferences: ^2.2.3
+
+
 
 dev_dependencies:
   flutter_test:
@@ -56,6 +62,8 @@ dev_dependencies:
 # The following section is specific to Flutter packages.
 flutter:
 
+  assets:
+    - assets/logo.png
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
@@ -91,3 +99,5 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/to/font-from-package
+
+
