--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   image_picker: ^1.1.1
   path_provider: ^2.1.4
   shared_preferences: ^2.2.3
+  table_calendar: ^3.1.0
 
 dev_dependencies:
   flutter_test:
